--- a/.github/workflows/deploy-from-main.yml
+++ b/.github/workflows/deploy-from-main.yml
@@ -28,5 +28,8 @@ jobs:
       run: git checkout -b gh-pages
     - name: Promote build
       run: mv dist /tmp/dist && ls | grep -v ".git" | xargs rm -r && mv /tmp/dist/* .
-    - name: Publish build
-      run: git config --global user.email "ci@github.com" && git config --global user.name "Github CI" && git add --all && git commit -m "updated build" && git push --set-upstream origin gh-pages --force
+    - name: Deploy to Pages
+      uses: peaceiris/actions-gh-pages@v4
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        publish_dir: ./_site
